[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Bukhari Script.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menus/RegisterMenu.gd" type="Script" id=3]
[ext_resource path="res://Menus/Elements/Buttons/ButtonGreen.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="RegisterMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 576.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 11.0
margin_right = 1024.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.431519, 0.629844, 0.789063, 1 )
text = "Registration"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 143.0
margin_right = 1024.0
margin_bottom = 528.0
custom_constants/separation = 20

[node name="UsernameContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
margin_right = 1024.0
margin_bottom = 75.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/UsernameContainer"]
margin_left = 137.0
margin_right = 482.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Username:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer2/UsernameContainer"]
margin_left = 486.0
margin_right = 886.0
margin_bottom = 75.0
rect_min_size = Vector2( 400, 0 )

[node name="PasswordContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
margin_top = 95.0
margin_right = 1024.0
margin_bottom = 170.0
custom_constants/separation = 14
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/PasswordContainer"]
margin_left = 139.0
margin_right = 470.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Password:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer2/PasswordContainer"]
margin_left = 484.0
margin_right = 884.0
margin_bottom = 75.0
rect_min_size = Vector2( 400, 0 )
expand_to_text_length = true

[node name="ConfirmPasswordContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
margin_top = 190.0
margin_right = 1024.0
margin_bottom = 265.0
custom_constants/separation = 71
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/ConfirmPasswordContainer"]
margin_left = 138.0
margin_right = 414.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Confirm:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer2/ConfirmPasswordContainer"]
margin_left = 485.0
margin_right = 885.0
margin_bottom = 75.0
rect_min_size = Vector2( 400, 0 )
expand_to_text_length = true

[node name="RegisterButton" parent="VBoxContainer/VBoxContainer2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 362.0
margin_top = 285.0
margin_right = 662.0
margin_bottom = 385.0
rect_min_size = Vector2( 300, 100 )
size_flags_horizontal = 4

[node name="ButtonText" parent="VBoxContainer/VBoxContainer2/RegisterButton" index="0"]
text = "Register"

[node name="notification" type="Label" parent="VBoxContainer"]
margin_top = 544.0
margin_right = 1024.0
margin_bottom = 565.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]

[editable path="VBoxContainer/VBoxContainer2/RegisterButton"]
